# fastbot

./: DI.py  FastBot.py  README.md  __init__.py  pyproject.toml
FastBot/: DI.py  FastBot.py  MiniApp.py  __init__.py
FastBot/builders/: inline_menu_builder.py
FastBot/configs/: configs.py
FastBot/core/: types.py
FastBot/decorators/: __init__.py  context_decorator.py  with_template_engine.py
FastBot/engine/context/: context_engine.py
FastBot/engine/templates/: __init__.py  template_engine.py
FastBot/strategies/: __init__.py  handler_strategy.py
FastBot/utils/: message.py
builders/: __init__.py  reply_menu_builder.py
configs/: __init__.py  configs.py
core/: __init__.py  types.py
decorators/: __init__.py  context_decorator.py  dependencies.py  reply_menu_decorator.py  with_template_engine.py
dependencies/: __init__.py  dependencies.py
engine/: __init__.py
engine/templates/: __init__.py  template_engine.py  web_template_engine.py
event/: __init__.py  event.py
filters/: __init__.py
src/FastBotLib/: DI.py  FastBot.py  MiniApp.py  __init__.py
src/FastBotLib/builders/: inline_menu_builder.py  reply_menu_builder.py
src/FastBotLib/configs/: configs.py
src/FastBotLib/decorators/: context_decorator.py  reply_menu_decorator.py  with_template_engine.py
src/FastBotLib/filters/: state_filter.py
src/FastBotLib/logger/: logger.py
src/config/: celery.py  celery_utils.py
src/fastbot/: main.py
src/fastbot/contexts/: profile.lua  (+2 more)
src/tasks/: test_tasks.py
static/: index.html
strategies/: handler_strategy.py
tests/: event_tests.py
(+50 files in other folders)
